Aboutページのテキスト部分をコーディングした

--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
         </div>
     </section>
     <section id="about">
-
+        <div class="triangle-left"></div>
+        <div class="container">
+            <div class="title">
+                <h1>About me</h1>
+            </div>
+            <div class="contents">
+                <h2>Shuto Urayama / 浦山秀斗</h2>
+                <h3>Tokyo City University</h3>
+                <div class="text">
+                    Hello, My name is Shuto Urayama.
+                    I am good at three things.  
+                    It is Music, Programming, and Making meaningful change.
+                    As for the music, I was started Playing the Piano When Im 7 years old.
+                </div>
+            </div>
+            
+        </div>
     </section>
     <section id="passion">
 
