流体シェイプのプロフィール画像を生成した。

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="fluid.css">
+    <title>Portfolio Site</title>
 </head>
 <body>
     <section id="name-view">
@@ -19,20 +20,21 @@
     <section id="about">
         <div class="triangle-left"></div>
         <div class="container">
-            <div class="title">
-                <h1>About me</h1>
-            </div>
-            <div class="contents">
-                <h2>Shuto Urayama / 浦山秀斗</h2>
-                <h3>Tokyo City University</h3>
-                <div class="text">
-                    Hello, My name is Shuto Urayama.
-                    I am good at three things.  
-                    It is Music, Programming, and Making meaningful change.
-                    As for the music, I was started Playing the Piano When Im 7 years old.
+            <div class="wrapper">
+                <div class="title">
+                    <h1>About me</h1>
+                </div>
+                <div class="contents">
+                    <h2>Shuto Urayama / 浦山秀斗</h2>
+                    <h3>Tokyo City University</h3>
+                    <div class="text">
+                        I'm an undergraduate student at Tokyo City University,
+                        enrolled Media Information Studies, majoring in Information Systems.
+                        I have a passion for music and programming that is greater than any other person and has left behind many works.
+                    </div>
                 </div>
             </div>
-            
+            <div class="fluid"></div>
         </div>
     </section>
     <section id="passion">
