--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
         </div>
     </section>
     <section id="about">
-        <div class="triangle-left"></div>
+        <div class="pentagon-left"></div>
         <div class="container">
             <div class="wrapper">
-                <div class="title">
-                    <h1>About me</h1>
-                </div>
+                <h1 class="title"> About me</h1>
                 <div class="contents">
                     <h2>Shuto Urayama / 浦山秀斗</h2>
                     <h3>Tokyo City University</h3>
@@ -37,8 +35,22 @@
             <div class="fluid"></div>
         </div>
     </section>
-    <section id="passion">
-
+    <section id="statement">
+        <div class="pentagon-right"></div>
+        <div class="container">
+            <h1 class="title">Statement</h1>
+            <div class="wrapper">
+                <h2 class="sub-title">A world where anyone can create <br> what they want to create.</h2>
+                <div class="text">
+                    Young people are good at thinking something new.<br>
+                    However, technology is not up to the task of making that happen.<br>
+                    I wanna break down the barriers that bother us to do something.<br>
+                    My passion is not to give things away, but to provide the means,<br>
+                    So I keep on learning.
+                </div>
+            </div>
+            
+        </div>
     </section>
     <section id="works">
 
