skillセクションを追加

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1 class="title"> About me</h1>
                 <div class="contents">
                     <h2>Shuto Urayama / 浦山秀斗</h2>
-                    <h3>Tokyo City University</h3>
+                    <h3>Tokyo City University<br>Life is Tech!! Mentor</h3>
                     <div class="text">
                         I'm an undergraduate student at Tokyo City University,
                         enrolled Media Information Studies, majoring in Information Systems.
@@ -51,8 +51,11 @@
             </div>
         </div>
     </section>
+    <section id="skill">
+
+    </section>
     <section id="works">
-        
+
     </section>
     <section id="links">
 
