--- a/index.html
+++ b/index.html
@@ -52,7 +52,21 @@
         </div>
     </section>
     <section id="skill">
-
+        <div class="pentagon-left"></div>
+        <div class="container">
+            <h1 class="title">Skill</h1>
+            <ul class="capable-lists">
+                <li class="capable-item">AdobeXD</li>
+                <li class="capable-item">HTML&CSS</li>
+                <li class="capable-item">Python</li>
+                <li class="capable-item">SwiftUI</li>
+                <li class="capable-item">Shell Script</li>
+                <li class="capable-item">React</li>
+                <li class="capable-item">Ruby on Rails</li>
+                <li class="capable-item">(Music Composing)</li>
+                
+            </ul>
+        </div>
     </section>
     <section id="works">
 
