footerの実装をした

--- a/index.html
+++ b/index.html
@@ -63,18 +63,32 @@
                 <li class="capable-item">Shell Script</li>
                 <li class="capable-item">React</li>
                 <li class="capable-item">Ruby on Rails</li>
-                <li class="capable-item">(Music Composing)</li>
+                <li class="capable-item">Music Composing</li>
                 
             </ul>
         </div>
     </section>
+    <section id="links">
+        <div class="pentagon-right"></div>
+        <div class="container">
+            <h1 class="title">Links</h1>
+            <ul>
+                <li><a href="https://github.com/urassh">Git Hub</a></li>
+                <li><a href="https://twitter.com/urassh_engineer">Twitter</a></li>
+                <li><a href="https://www.facebook.com/shuto.1011">Facebook</a></li>
+                <li><a href="https://www.instagram.com/urassh_engineer">Instagram</a></li>
+            </ul>
+        </div>
+        
+    </section>
     <section id="works">
 
     </section>
-    <section id="links">
-
-    </section>
-    <footer></footer>
+    <footer>
+        <div class="copy-right">
+            ©︎ Shuto Urayama All Rights Reserve
+        </div>
+    </footer>
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="particles.js"></script>
     <script src="main.js"></script>
