--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fluid.css">
     <title>Portfolio Site</title>
@@ -79,17 +80,51 @@
                 <li><a href="https://www.instagram.com/urassh_engineer">Instagram</a></li>
             </ul>
         </div>
-        
     </section>
     <section id="works">
-
+        <div class="container">
+            <h1 class="title">Works</h1>
+            <ul class="slider">
+                <li>
+                    <img src="" alt="">
+                    <div class="texts">
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <div class="texts">
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <div class="texts">
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <div class="texts">
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
     <footer>
         <div class="copy-right">
             ©︎ Shuto Urayama All Rights Reserve
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="slider.js"></script>
     <script src="particles.js"></script>
     <script src="main.js"></script>
 </body>
