とりま完成

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fluid.css">
-    <title>Portfolio Site</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <section id="name-view">
@@ -25,7 +25,7 @@
                 <h1 class="title"> About me</h1>
                 <div class="contents">
                     <h2>Shuto Urayama / 浦山秀斗</h2>
-                    <h3>Tokyo City University<br>Life is Tech!! Mentor</h3>
+                    <h3>Tokyo City University</h3>
                     <div class="text">
                         I'm an undergraduate student at Tokyo City University,
                         enrolled Media Information Studies, majoring in Information Systems.
@@ -86,31 +86,26 @@
             <h1 class="title">Works</h1>
             <ul class="slider">
                 <li>
-                    <img src="" alt="">
+                    <img src="./Images/instagram_scraping.png" alt="" width="400px" height="300px">
                     <div class="texts">
-                        <h2></h2>
-                        <p></p>
+                        <h2>Instagram フォロワー解析プログラム</h2>
+                        <p>
+                            これは高校生時代に私が初めてPythonで開発したプログラムだ。<br>
+                            高校生の私は、自分がフォローしているのにも関わらず、フォローを返してない人を
+                            許せないと思い、個人で開発をした。<br>
+                            ちなみに、暴いたところで私が何かするわけではない。泣くだけだ。
+                        </p>
                     </div>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="./Images/yoshizawa_quest.png" alt="">
                     <div class="texts">
-                        <h2></h2>
-                        <p></p>
-                    </div>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <div class="texts">
-                        <h2></h2>
-                        <p></p>
-                    </div>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <div class="texts">
-                        <h2></h2>
-                        <p></p>
+                        <h2>クイズアプリ Yoshizawa Quest</h2>
+                        <p>
+                            これは私が卒業間際の思い出づくりとして、クラスでクイズ大会を実施した時に
+                            作成したクイズアプリ「Yoshizawa Quest」だ。デザイン企画構成、アプリ開発
+                            全ての工程を一人で担当した。54人に実際に遊んでもらった体験は今の私の開発の源となっている。
+                        </p>
                     </div>
                 </li>
             </ul>
