-を空白にした。

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="contents">
                     <h2>Shuto Urayama / 浦山秀斗</h2>
                     <h3>Tokyo City University</h3>
-                    <h3>Life is Tech-Mentor</h3>
+                    <h3>Life is Tech Mentor</h3>
                     <div class="text">
                         I'm an undergraduate student at Tokyo City University,
                         enrolled Media Information Studies, majoring in Information Systems.
